# M002

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
djangoProject/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py
users/api/v1/: serializers.py  urls.py  viewsets.py
users/migrations/: 0001_initial.py
utils/: misc.py  pagination.py  permissions.py  views.py
